[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = "^1.7.3"
Flask = "^2.0.2"
api = "^0.0.7"
pandas = "^1.4.0"
tweepy = "^4.5.0"
preprocessor = "^1.1.3"
twitter = "^1.19.3"
timing = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"