[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "python-template"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.0.2"
api = "^0.0.7"
discord = "^1.7.3"
numpy = "^1.22.2"
pandas = "^1.4.0"
preprocessor = "^1.1.3"
python = "^3.8"
timing = "^0.4.0"
tweepy = "^4.5.0"
twitter = "^1.19.3"
[tool.poetry.dev-dependencies]
